--- a/apps/templates/home/tbl_vm2tenants.html
+++ b/apps/templates/home/tbl_vm2tenants.html
@@ -43,30 +43,24 @@
                                                     <thead>
                                                         <tr>
                                                             <th>#</th>
-                                                            <th>First Name</th>
-                                                            <th>Last Name</th>
-                                                            <th>Username</th>
+                                                            <th>VM Path</th>
+                                                            <th>Name</th>
+                                                            <th>Guest</th>
+                                                            <th>Annotation</th>
+                                                            <th>IP</th>
                                                         </tr>
                                                     </thead>
                                                     <tbody>
+                                                        {% for vm in vms %}  
                                                         <tr>
-                                                            <th scope="row">1</th>
-                                                            <td>Mark</td>
-                                                            <td>Otto</td>
-                                                            <td>@mdo</td>
+                                                            <th scope="row">{{ loop.index }}</th>
+                                                            <td>{{ vm['VM Path'] }}</td>
+                                                            <td>{{ vm['Name'] }}</td>
+                                                            <td>{{ vm['Guest'] }}</td>
+                                                            <td>{{ vm['Annotation'] }}</td>
+                                                            <td>{{ vm['IP'] }}</td>
                                                         </tr>
-                                                        <tr>
-                                                            <th scope="row">2</th>
-                                                            <td>Jacob</td>
-                                                            <td>Thornton</td>
-                                                            <td>@fat</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <th scope="row">3</th>
-                                                            <td>Larry</td>
-                                                            <td>the Bird</td>
-                                                            <td>@twitter</td>
-                                                        </tr>
+                                                        {% endfor %}
                                                     </tbody>
                                                 </table>
                                             </div>
