--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -25,12 +25,12 @@
                 </li>
                 <li data-username="Table bootstrap datatable footable" 
                     class="nav-item {% if 'tbl_vm2tenants' in segment %} active {% endif %}">
-                    <a href="/tbl_vm2tenants.html" class="nav-link "><span class="pcoded-micon"><i
+                    <a href="/vm2tenants" class="nav-link "><span class="pcoded-micon"><i
                             class="feather icon-server"></i></span><span class="pcoded-mtext">VM to Tenants</span></a>
                 </li>
                 <li data-username="Table bootstrap datatable footable" 
                     class="nav-item {% if 'tbl_flavors' in segment %} active {% endif %}">
-                    <a href="/tbl_flavors.html" class="nav-link "><span class="pcoded-micon"><i
+                    <a href="/flavors" class="nav-link "><span class="pcoded-micon"><i
                             class="feather icon-server"></i></span><span class="pcoded-mtext">Flavors</span></a>
                 </li>
                 <li data-username="Table bootstrap datatable footable" 
