--- a/apps/templates/home/tbl_networks.html
+++ b/apps/templates/home/tbl_networks.html
@@ -39,35 +39,7 @@
                                         </div>
                                         <div class="card-block table-border-style">
                                             <div class="table-responsive">
-                                                <table class="table table-striped">
-                                                    <thead>
-                                                        <tr>
-                                                            <th>#</th>
-                                                            <th>First Name</th>
-                                                            <th>Last Name</th>
-                                                            <th>Username</th>
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                        <tr>
-                                                            <th scope="row">1</th>
-                                                            <td>Mark</td>
-                                                            <td>Otto</td>
-                                                            <td>@mdo</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <th scope="row">2</th>
-                                                            <td>Jacob</td>
-                                                            <td>Thornton</td>
-                                                            <td>@fat</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <th scope="row">3</th>
-                                                            <td>Larry</td>
-                                                            <td>the Bird</td>
-                                                            <td>@twitter</td>
-                                                        </tr>
-                                                    </tbody>
+                                                <table id="network" class="table table-striped">
                                                 </table>
                                             </div>
                                         </div>
@@ -81,7 +53,6 @@
                     </div>
                 </div>
             </div>
-            
         </div>
     </section>
     <!-- [ Main Content ] end -->
@@ -89,4 +60,40 @@
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
-{% block javascripts %}{% endblock javascripts %}
+{% block javascripts %}
+<script>
+var base_url = window.location.origin;
+
+let editor = new DataTable.Editor( {
+    ajax: base_url + '/networks/json',
+    table: '#network',
+    fields: [
+        { label: "#", name: 'DT_RowId'},
+        { label: 'Network Name', name: 'Network Name' },
+        { label: 'VM Name',  name: 'VM Name'  },
+        { label: 'VM Instance UUID',  name: 'VM Instance UUID'  },
+    ]
+} );
+
+let table = new DataTable('#network', {
+    ajax: base_url + '/networks/json',
+    columns: [
+        { data: 'DT_RowId'},
+        { data: 'Network Name' },
+        { data: 'VM Name' },
+        { data: 'VM Instance UUID' },
+        // etc
+    ],
+    layout: {
+        topStart: {
+            buttons: [
+                { extend: 'create', editor: editor },
+                { extend: 'edit',   editor: editor },
+                { extend: 'remove', editor: editor }
+            ]
+        }  
+    },
+    select: true
+} );
+</script>
+{% endblock javascripts %}
