--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -35,7 +35,7 @@
                 </li>
                 <li data-username="Table bootstrap datatable footable" 
                     class="nav-item {% if 'tbl_networks' in segment %} active {% endif %}">
-                    <a href="/tbl_networks.html" class="nav-link "><span class="pcoded-micon"><i
+                    <a href="/networks" class="nav-link "><span class="pcoded-micon"><i
                             class="feather icon-server"></i></span><span class="pcoded-mtext">Networks</span></a>
                 </li>
             </ul>
