--- a/apps/templates/layouts/base-fullscreen.html
+++ b/apps/templates/layouts/base-fullscreen.html
@@ -25,6 +25,11 @@
     <link rel="stylesheet" href="{{ config.ASSETS_ROOT }}/fonts/fontawesome/css/fontawesome-all.min.css">
     <!-- animation css -->
     <link rel="stylesheet" href="{{ config.ASSETS_ROOT }}/plugins/animation/css/animate.min.css">
+    <!-- gijgo css -->
+    <link rel="stylesheet" href="{{ config.ASSETS_ROOT }}/plugins/gijgo/css/gijgo.min.css">
+    <!-- datatables css -->
+    <link rel="stylesheet" href="{{ config.ASSETS_ROOT }}/plugins/datatables/css/datatables.min.css">
+    <link rel="stylesheet" href="{{ config.ASSETS_ROOT }}/plugins/datatables/css/editor.dataTables.css">
     <!-- vendor css -->
     <link rel="stylesheet" href="{{ config.ASSETS_ROOT }}/css/style.css">
     <!-- dark mode css -->
