--- a/apps/templates/home/tbl_vm2tenants.html
+++ b/apps/templates/home/tbl_vm2tenants.html
@@ -39,29 +39,33 @@
                                         </div>
                                         <div class="card-block table-border-style">
                                             <div class="table-responsive">
-                                                <table class="table table-striped">
+                                                <table id="vm2tenants" class="table table-striped">
                                                     <thead>
                                                         <tr>
                                                             <th>#</th>
                                                             <th>VM Path</th>
                                                             <th>Name</th>
                                                             <th>Guest</th>
+                                                            <th>Instance UUID</th>
                                                             <th>Annotation</th>
+                                                            <th>State</th>
                                                             <th>IP</th>
+                                                            <th>Question</th>
                                                         </tr>
                                                     </thead>
-                                                    <tbody>
-                                                        {% for vm in vms %}  
+                                                    <tfoot>
                                                         <tr>
-                                                            <th scope="row">{{ loop.index }}</th>
-                                                            <td>{{ vm['VM Path'] }}</td>
-                                                            <td>{{ vm['Name'] }}</td>
-                                                            <td>{{ vm['Guest'] }}</td>
-                                                            <td>{{ vm['Annotation'] }}</td>
-                                                            <td>{{ vm['IP'] }}</td>
+                                                            <th>#</th>
+                                                            <th>VM Path</th>
+                                                            <th>Name</th>
+                                                            <th>Guest</th>
+                                                            <th>Instance UUID</th>
+                                                            <th>Annotation</th>
+                                                            <th>State</th>
+                                                            <th>IP</th>
+                                                            <th>Question</th>
                                                         </tr>
-                                                        {% endfor %}
-                                                    </tbody>
+                                                    </tfoot>
                                                 </table>
                                             </div>
                                         </div>
@@ -83,4 +87,49 @@
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
-{% block javascripts %}{% endblock javascripts %}
+{% block javascripts %}
+<script>
+var base_url = window.location.origin;
+let vm2tenant_editor = new DataTable.Editor( {
+    ajax: base_url + '/vm2tenants/payload',
+    table: '#vm2tenants',
+    idSrc:  'seqno',
+    fields: [
+        { label: "#", name: 'seqno'},
+        { label: 'VM Path',  name: 'VM Path'  },
+        { label: 'Name', name: 'Name' },
+        { label: 'Guest',  name: 'Guest'  },
+        { label: 'Instance UUID',  name: 'Instance UUID'  },
+        { label: 'Annotation',  name: 'Annotation'  },
+        { label: 'State',  name: 'State'  },
+        { label: 'IP',  name: 'IP'  },
+        { label: 'Question',  name: 'Question'  },
+    ]
+} );
+
+let vm2tenant_table = new DataTable('#vm2tenants', {
+    ajax: base_url + '/vm2tenants/payload',
+    columns: [
+        { data: 'seqno'},
+        { data: 'VM Path' },
+        { data: 'Name' },
+        { data: 'Guest' },
+        { data: 'Instance UUID' },
+        { data: 'Annotation' },
+        { data: 'State' },
+        { data: 'IP' },
+        { data: 'Question' },
+    ],
+    layout: {
+        topStart: {
+            buttons: [
+                { extend: 'create', editor: vm2tenant_editor },
+                { extend: 'edit',   editor: vm2tenant_editor },
+                { extend: 'remove', editor: vm2tenant_editor }
+            ]
+        }  
+    },
+    select: true
+} );
+</script>
+{% endblock javascripts %}
