--- a/apps/templates/includes/scripts.html
+++ b/apps/templates/includes/scripts.html
@@ -2,3 +2,6 @@
 <script src="{{ config.ASSETS_ROOT }}/plugins/bootstrap/js/bootstrap.min.js"></script>
 <script src="{{ config.ASSETS_ROOT }}/js/pcoded.min.js"></script>
 <script src="{{ config.ASSETS_ROOT }}/js/dark-mode.js"></script>
+<script src="{{ config.ASSETS_ROOT }}/plugins/gijgo/js/gijgo.min.js"></script>
+<script src="{{ config.ASSETS_ROOT }}/plugins/datatables/js/datatables.min.js"></script>
+<script src="{{ config.ASSETS_ROOT }}/plugins/datatables/js/dataTables.editor.js"></script>
