Added editable datatables

--- a/apps/templates/includes/scripts.html
+++ b/apps/templates/includes/scripts.html
@@ -1,3 +1,5 @@
+<script src="{{ config.ASSETS_ROOT }}/plugins/jquery/js/jquery.min.js"></script>
+<script src="{{ config.ASSETS_ROOT }}/plugins/jquery-ui/js/jquery-ui.js"></script>
 <script src="{{ config.ASSETS_ROOT }}/js/vendor-all.min.js"></script>
 <script src="{{ config.ASSETS_ROOT }}/plugins/bootstrap/js/bootstrap.min.js"></script>
 <script src="{{ config.ASSETS_ROOT }}/js/pcoded.min.js"></script>
