--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -24,17 +24,17 @@
                     <label>Mapping</label>
                 </li>
                 <li data-username="Table bootstrap datatable footable" 
-                    class="nav-item {% if 'tbl_vm2tenants' in segment %} active {% endif %}">
+                    class="nav-item {% if 'vm2tenants' in segment %} active {% endif %}">
                     <a href="/vm2tenants" class="nav-link "><span class="pcoded-micon"><i
                             class="feather icon-server"></i></span><span class="pcoded-mtext">VM to Tenants</span></a>
                 </li>
                 <li data-username="Table bootstrap datatable footable" 
-                    class="nav-item {% if 'tbl_flavors' in segment %} active {% endif %}">
+                    class="nav-item {% if 'flavors' in segment %} active {% endif %}">
                     <a href="/flavors" class="nav-link "><span class="pcoded-micon"><i
                             class="feather icon-server"></i></span><span class="pcoded-mtext">Flavors</span></a>
                 </li>
                 <li data-username="Table bootstrap datatable footable" 
-                    class="nav-item {% if 'tbl_networks' in segment %} active {% endif %}">
+                    class="nav-item {% if 'networks' in segment %} active {% endif %}">
                     <a href="/networks" class="nav-link "><span class="pcoded-micon"><i
                             class="feather icon-server"></i></span><span class="pcoded-mtext">Networks</span></a>
                 </li>
